--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   cached_network_image: ^3.3.1
+  flutter_cache_manager: ^3.3.1
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
