--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
   connectivity_plus: ^5.0.2
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
