--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   connectivity_plus: ^5.0.2
   photo_view: ^0.14.0
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
